# multitude

./: .gitignore  CMakeLists.txt  README.md  setup-lib.pri
EmailSending/: CMakeLists.txt  Email.cpp  Email.hpp  EmailSending.pro  Export.hpp  SendImplementation.cpp  SendImplementation.hpp  Sender.cpp  Sender.hpp
VideoDisplay/: AVDecoder.hpp  CMakeLists.txt  DummyDecoder.cpp  DummyDecoder.hpp  FfmpegDecoder.cpp  FfmpegDecoder.hpp  FfmpegVideoFormatSelector.cpp  FfmpegVideoFormatSelector.hpp  FfmpegVideoFormatSelectorLinux.cpp  FfmpegVideoFormatSelectorMac.mm  FfmpegVideoFormatSelectorWin.cpp  MWCapture.cpp  MWCapture.hpp  RGBEasy.cpp  RGBEasy.hpp  Utils.hpp  V4L2Monitor.cpp  VideoCaptureMonitor.hpp  WindowsVideoHelpers.cpp  WindowsVideoHelpers.hpp  WindowsVideoMonitor.cpp
VideoDisplay/rgbeasy-sdk-v7.14.1/: CMakeLists.txt
multitude/: .gitignore  CMakeLists.txt  Externals.pri  app_src_inst.pri  env.sh  library.pri  multitude-core.pri  multitude-internal.pri  multitude-internal.pro  multitude-lib.pri  multitude.pri  multitude.pro  premake4.lua  qmake_utils.prf  setup-lib.pri  setup.pri
multitude/Applications/: Applications.pri  Applications.pro  Applications_end.pri  premake4.lua
multitude/Box2D/: Box2D-version.txt  Box2D.pro  premake4.lua
multitude/Box2Dtmp/: Box2D.pro
multitude/CodingGuide/: CodingGuide.hpp  MultiThreading.hpp  SomeClass.cpp  SomeClass.hpp
multitude/Documents/: Documents.pro  compiling FFMPEG.txt
multitude/EmailSending/: CMakeLists.txt  Email.cpp  Email.hpp  EmailSending.pro  Export.hpp  SendImplementation.cpp  SendImplementation.hpp  Sender.cpp  Sender.hpp
multitude/Examples/: Examples.pri  Examples.pro
multitude/Luminous/: AdaptiveVSync.cpp  AdaptiveVSync.hpp  BGThread.cpp  BGThread.hpp  BezierCurve.hpp  BezierSpline.cpp  BezierSpline.hpp  BezierSplineBuilder.cpp  BezierSplineBuilder.hpp  BezierSplineEraser.hpp  BezierSplineFitter.cpp  BezierSplineFitter.hpp  BezierSplineRenderer.cpp  BezierSplineRenderer.hpp  BezierSplineTesselator.cpp  BezierSplineTesselator.hpp  BezierSplineTessellator.cpp  BezierSplineTessellator.hpp  BlendMode.cpp  BlendMode.hpp  Buffer.cpp  Buffer.hpp  BufferGL.cpp  BufferGL.hpp  CMakeLists.txt  CPUMipmapStore.cpp  CPUMipmapStore.hpp  CPUMipmaps.cpp  CPUMipmaps.hpp  CocoaWindow.hpp  CocoaWindow.mm  CodecRegistry.cpp  CodecRegistry.hpp  Collectable.cpp  Collectable.hpp  ColorCorrection.cpp  ColorCorrection.hpp  ColorCorrectionFilter.cpp  ColorCorrectionFilter.hpp  ContextArray.hpp  (+238 more)
multitude/Nimble/: CMakeLists.txt  Circle.cpp  Circle.hpp  ClipStack.cpp  ClipStack.hpp  Export.hpp  Frame4.hpp  Histogram.cpp  Histogram.hpp  Interpolation.hpp  KeyStone.cpp  KeyStone.hpp  LensCorrection.cpp  LensCorrection.hpp  LineIntersection.hpp  LineSegment2.cpp  LineSegment2.hpp  Math.hpp  Matrix.cpp  Matrix2.hpp  Matrix2Impl.hpp  Matrix3.hpp  Matrix3Impl.hpp  Matrix4.hpp  Matrix4Impl.hpp  Nimble.hpp  Nimble.pro  Path.cpp  Path.hpp  Plane.cpp  Plane.hpp  Quaternion.hpp  Ramp.cpp  Ramp.hpp  Random.cpp  Random.hpp  Range.cpp  Range.hpp  Rect.cpp  Rect.hpp  (+14 more)
multitude/Packaging/: OSX-Multitude.pmdoc.tgz  OSX-external-libs.pmdoc.tgz  osx-get  osx-get-graphicsmagick  osx-get-pkgconfigs
multitude/Patterns/: CMakeLists.txt  Dummy.cpp  Export.hpp  Factory.hpp  NotCopyable.cpp  NotCopyable.hpp  Patterns.hpp  Patterns.pro  Singleton.hpp  premake4.lua
multitude/Pdf/: CMakeLists.txt  Export.hpp  PDFManager.cpp  PDFManager.hpp  Pdf.pro
multitude/Poetic/: BBox.cpp  BBox.hpp  CPUBitmapFont.cpp  CPUBitmapFont.hpp  CPUBitmapGlyph.cpp  CPUBitmapGlyph.hpp  CPUFont.cpp  CPUFont.hpp  CPUFontBase.cpp  CPUFontBase.hpp  CPUManagedFont.cpp  CPUManagedFont.hpp  CPUWrapperFont.cpp  CPUWrapperFont.hpp  Charmap.cpp  Charmap.hpp  Export.hpp  Face.cpp  Face.hpp  FontManager.cpp  FontManager.hpp  GPUFont.cpp  GPUFont.hpp  GPUFontBase.cpp  GPUFontBase.hpp  GPUManagedFont.cpp  GPUManagedFont.hpp  GPUTextureFont.cpp  GPUTextureFont.hpp  GPUTextureGlyph.cpp  GPUTextureGlyph.hpp  GPUWrapperFont.cpp  GPUWrapperFont.hpp  Glyph.cpp  Glyph.hpp  GlyphContainer.cpp  GlyphContainer.hpp  Poetic.cpp  Poetic.hpp  Poetic.pro  (+5 more)
multitude/Posh/: Platform.h  Platform_OSX.mm  Posh.pro  Window.hpp  WindowEventHook.hpp  WindowOSX.mm
multitude/Punctual/: CMakeLists.txt  Executors.cpp  Executors.hpp  Export.hpp  Helpers.hpp  LimitedTimeExecutor.cpp  LimitedTimeExecutor.hpp  OnDemandExecutor.cpp  OnDemandExecutor.hpp  Punctual.pro  TaskScheduler.cpp  TaskScheduler.hpp  TaskWrapper.hpp
multitude/Radiant/: Allocators.hpp  ArenaAllocator.hpp  ArrayMap.hpp  ArraySet.hpp  BGThread.cpp  BGThread.hpp  BGThreadExecutor.cpp  BGThreadExecutor.hpp  BinaryData.cpp  BinaryData.hpp  BinaryStream.hpp  Blake3.hpp  BlockRingBuffer.hpp  Buffer.hpp  CMakeCache.txt  CMakeLists.txt  CSVDocument.cpp  CSVDocument.hpp  CacheManager.cpp  CacheManager.hpp  CallStack.hpp  CallStackDummy.cpp  CallStackLinux.cpp  CallStackUnix.cpp  CallStackW32.cpp  CameraDriver.cpp  CameraDriver.hpp  ClonablePtr.hpp  CocoaWindow.hpp  CocoaWindow.mm  Color.cpp  Color.hpp  ColorUtils.cpp  ColorUtils.hpp  CommandLineArguments.hpp  Condition.cpp  Condition.hpp  ConditionPt.cpp  ConditionQt.cpp  Config.hpp  (+225 more)
multitude/Resonant/: Application.cpp  Application.hpp  AudioFileHandler.cpp  AudioFileHandler.hpp  AudioLoop.cpp  AudioLoop.hpp  AudioLoopPortAudio.cpp  AudioLoopPriv.hpp  AudioLoopPulseAudio.cpp  AudioLoopPulseAudio.hpp  AudioLoop_private.hpp  CMakeLists.txt  DSPNetwork.cpp  DSPNetwork.hpp  Export.hpp  LimiterAlgorithm.cpp  LimiterAlgorithm.hpp  Module.cpp  Module.hpp  ModuleBufferPlayer.cpp  ModuleBufferPlayer.hpp  ModuleFilePlay.cpp  ModuleFilePlay.hpp  ModuleGain.cpp  ModuleGain.hpp  ModuleInputPlayer.cpp  ModuleInputPlayer.hpp  ModuleOutCollect.cpp  ModuleOutCollect.hpp  ModulePanner.cpp  ModulePanner.hpp  ModulePulseAudio.cpp  ModulePulseAudio.hpp  ModuleRectPanner.cpp  ModuleRectPanner.hpp  ModuleSamplePlayer.cpp  ModuleSamplePlayer.hpp  PortAudioSource.cpp  PortAudioSource.hpp  PulseAudioContext.cpp  (+10 more)
multitude/Screenplay/: Export.hpp  Screenplay.hpp  Screenplay.pro  VideoFFMPEG.cpp  VideoFFMPEG.hpp  premake4.lua
(+947 files in other folders)
